--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.scroll_view {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
+.scroll_view::-webkit-scrollbar {
+  display: none;
+}
