✨ Feat : 분석추가 화면UI 추가

--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,13 @@
 }
 
 .scroll_view {
-  -ms-overflow-style: none; 
-  scrollbar-width: none; 
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 .scroll_view::-webkit-scrollbar {
   display: none;
+}
+
+.highlighted-range {
+  background-color: pink !important;
 }
