--- a/src/style/react-datepicker.css
+++ b/src/style/react-datepicker.css
@@ -32,9 +32,9 @@
 }
 
 .react-datepicker-wrapper {
-  display: inline-block;
+  /* display: inline-block;
   padding: 0;
-  border: 0;
+  border: 0; */
 }
 
 .react-datepicker {
@@ -46,8 +46,8 @@
   color: #000;
   border-radius: 0.3rem;
   display: inline-block;
-  position: absolute;
-  right: -20px;
+  position: relative;
+  left: 0px;
   top: 0;
   line-height: initial;
   box-shadow: 3px 2px 11px rgb(0 0 0 / 30%);
@@ -900,5 +900,5 @@
 }
 
 .unselectedDay :hover {
-  background-color: rgba(gray, 0.08);
+  background-color: rgba(#ccc, 0.08);
 }
