--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,11 @@
 .highlighted-range {
   background-color: pink !important;
 }
+
+@font-face {
+  font-family: "seolleimcool-SemiBold";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2312-1@1.1/seolleimcool-SemiBold.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
