--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,10 @@
       format("truetype");
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Godo';
+  font-style: normal;
+  font-weight: normal;
+  src: url('//fastly.jsdelivr.net/korean-webfonts/1/corps/godo/Godo/GodoM.woff2') format('woff2'), url('//fastly.jsdelivr.net/korean-webfonts/1/corps/godo/Godo/GodoM.woff') format('woff');
+}
